--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -9,26 +9,22 @@
     padding-left: 10px;
     font-size: 15px;
     display: flex;
+    text-align: start;
     justify-content: space-between;
     align-items: center;
     border: 1px solid #DDDDDD;
 }
 
-.home {
-    display: flex;
-    
-}
-
 .nav_bars_icon {
     color: #595959;
-    font-size: 20px;
-    padding-left: 10px;
+    font-size: 17px;
+    padding-left: 5px;
 }
 
 .user_icon{
     color: #717171;
-    padding-right: 5px;
-    font-size: 30px;
+    padding-right: px;
+    font-size: 25px;
 }
 
 #menu{
@@ -70,13 +66,13 @@
     position: relative;
 }
 
-.home {
+#home {
     background-color: white;
     display: flex;
     border-bottom: .5px solid #D3D3D3;
     width: 100%;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     font-size: 18px;
     height: 70px;
     gap: 10px;
@@ -93,3 +89,5 @@
  #logo > a >img {
     height: 50px;
  }
+
+
