--- a/frontend/src/components/SpotDetail/spotDetail.css
+++ b/frontend/src/components/SpotDetail/spotDetail.css
@@ -16,3 +16,29 @@
   align-items: center;
 }
 
+.createReviewButton {
+  background-color: white;
+  border: none;
+  font-size: 18px;
+  margin-top: 20px;
+  font-family: 'Montserrat', sans-serif;
+  background-image: linear-gradient(to right, #E61E4D 0%, #E31C5F 50%, #D70466 100%);
+  border: none;
+  border-radius: 10px;
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  height: 50px;
+  width: 370px;
+}
+
+.spotsReview span {
+  font-size: 15px;
+  margin-right: 12px ;
+ }
+
+ .spotsReview label{
+  display: flex;
+  padding: 5px;
+  font-family: 'Montserrat', sans-serif;
+}
