--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
   }
   
   #modal-background {
@@ -20,5 +21,14 @@
   
   #modal-content {
     position: absolute;
-    background-color:white;
+    background-color: transparent;
+    border-radius: 20px;
+    max-width: 50vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+  
   }
+
+  
