finished styling on login, signup, navbar

--- a/frontend/src/components/LoginFormModal/Login.css
+++ b/frontend/src/components/LoginFormModal/Login.css
@@ -47,11 +47,20 @@
   border: black 1.5px solid;
 }
 
-
+.loginButton {
+  background: #ff385c;
+  color: white;
+  font-weight: 500;
+  height: 45px;
+  width: 103%;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  width: 100%;
+}
 
 .button {
-  background: linear-gradient(to bottom right, #e5204d, #d70965);
-  color: white;
+  /* background: linear-gradient(to bottom right, #e5204d, #d70965);
+  color: white; */
   font-weight: 500;
   height: 45px;
   width: 103%;
@@ -63,4 +72,3 @@
 .button:hover {
   cursor: pointer;
 }
-
