--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -3,5 +3,44 @@
   margin: 8px 0;
   display: flex;
   float: left;
-  padding: 2px
+  padding: 2px;
+}
+
+.formDiv {
+  height: 100vh;
+  margin: 100px auto 0 auto;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.signUpForm {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.signUpForm input {
+  height: 30px;
+  border: #d3d3d3 1.5px solid;
+  width: 100%;
+  border-radius: 5px;
+  color: gray;
+}
+
+.signUp {
+  height: 0;
+}
+
+.signUpButton {
+  background-color: #ff385c;
+  border: none;
+  color: white;
+  padding: 10px 10px;
+  border-radius: 1rem;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
