made css changes to spot detail

--- a/frontend/src/components/LoginFormModal/Login.css
+++ b/frontend/src/components/LoginFormModal/Login.css
@@ -1,3 +1,6 @@
+* {
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
+}
 .modal {
   display: flex;
   flex-direction: column;
