--- a/frontend/src/components/SpotDetail/spotDetail.css
+++ b/frontend/src/components/SpotDetail/spotDetail.css
@@ -1,18 +1,108 @@
+.spotDetailPage {
+  margin: auto auto 0 30px;
+  flex-direction: column;
+  width: 100%;
+  gap: 15px;
+}
+
+.circle {
+  font-size: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 0.5rem;
+}
+.top {
+  display: flex;
+  gap: 15px;
+}
+
+.topText {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  flex-wrap: wrap;
+  width: 90%;
+ 
+}
+
+.editAndDeleteButtons {
+  margin-left: 100px;
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
+}
+
+.editButton, .deleteButton {
+  background-color: #ff385c;
+  border: none;
+  padding: 10px 15px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.avgStarRating {
+  display: flex !important;
+  font-size: 14px;
+  width: 100%;
+}
+
+.starIcon {
+  margin-right: 0.5rem;
+  height: 12px;
+  width: 12px;
+  /* flex-grow: 1; */
+}
+
+.avgRating {
+  margin-right: 0.5rem;
+  /* flex-grow: 1; */
+}
+
+.reviewCount {
+  margin-right: 0.5rem;
+  /* flex-grow: 1; */
+}
+
+.detailLocation {
+  display: flex;
+  /* flex-grow: 2; */
+}
+
 .detailImg {
-  float: left;
+  display: block;
+  background-size: cover;
+  border-radius: 33px;
+  display: flex;
+  object-fit: cover;
   width: 300px;
   height: 300px;
   background-size: cover;
   border-radius: 33px;
-  margin: 1rem;
   display: flex;
   position: static;
 }
 
-.detailName {
-  font-size: 50px;
+ .outerBox {
   display: flex;
-  justify-content: center;
+  width: 100%;
+  justify-content: space-between;
+  
+}
+
+.detailName {
+  font-size: 2rem !important;
+  display: flex;
+  margin-top: 15px;
+  justify-content: start;
   align-items: center;
 }
 
@@ -37,33 +127,73 @@
   width: 370px;
 }
 
-.spotsReview span {
-  font-size: 15px;
-  margin-right: 12px;
+.detailPrice {
+  margin-top: 10px;
+  font-weight: 800;
 }
 
-.spotsReview label {
+.bottomContainer {
   display: flex;
-  padding: 5px;
-  font-family: "Montserrat", sans-serif;
-}
-
-.spotDetailPage {
-  margin: 100px auto 0 auto;
-  display: flex;
-  flex-direction: column;
-  width: 70%;
-  gap: 15px;
-}
-
-.top {
-  display: flex;
+  flex-direction: wrap;
+  width: 100%;
   justify-content: space-between;
-  gap: 15px;
+  padding-bottom: 80px;
+  border-bottom: #D3D3D3 solid 1px;
 }
 
-.topText {
+.detailDescription {
+  padding-top: 10px;
+  width: 90%;
+  border-top: #D3D3D3 solid 1px;
+  letter-spacing: .5px;
+  line-height: 30px;
+  text-align: left;
+}
+
+#bookings_price {
+  width: 40%;
+  margin-right: 20px;
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  border: 1px solid #D3D3D3;
+  border-radius: 20px;
 }
+
+#price_bigger {
+  font-size: 21px;
+  font-weight: 700;
+}
+
+#priceId {
+  margin-left: 5px;
+  border: 0;
+  margin-top: 20px;
+  padding: 0;
+  font-weight: 300;
+}
+
+.bottomStars {
+  display: flex;
+  font-size: 14px;
+  margin-left: 5px;
+}
+
+.circleBottom {
+  font-size: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 0.3rem;
+  margin-left: 0.3rem;
+}
+
+.reviewStars {
+  display: flex;
+  font-size: 1em;
+  margin-left: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
