--- a/frontend/src/components/SpotsForm/form.css
+++ b/frontend/src/components/SpotsForm/form.css
@@ -5,6 +5,7 @@
 }
 
 .spotForm span {
+  display: flex;
   font-size: 15px;
   margin-right: 12px;
 }
@@ -31,21 +32,21 @@
 }
 
 input {
-    font-size: 16px;
-    padding-left: 10px;
-    font-family: 'Montserrat', sans-serif;
-    width: 350px;
-    border: 2px double rgb(216, 203, 203);
-    border-radius: 20px;
+  font-size: 16px;
+  padding-left: 10px;
+  font-family: "Montserrat", sans-serif;
+  width: 350px;
+  border: 2px double rgb(216, 203, 203);
+  border-radius: 20px;
 }
 
 .formContainer {
-    display: flex;
-    justify-content: center;
-    width: 50%;;
-    margin: auto;
-    margin-top: 10%;
-    padding:40px;
-    border: 2px double rgb(216, 203, 203);
-    border-radius: 20px;
-  }
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  margin: auto;
+  margin-top: 10%;
+  padding: 40px;
+  border: 2px double rgb(216, 203, 203);
+  border-radius: 20px;
+}
