--- a/frontend/src/components/SpotDetail/spotDetail.css
+++ b/frontend/src/components/SpotDetail/spotDetail.css
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   margin-right: 0.5rem;
+  margin-bottom: 7.69px;
 }
 .top {
   display: flex;
