--- a/frontend/src/components/SpotEdit/spotEdit.css
+++ b/frontend/src/components/SpotEdit/spotEdit.css
@@ -19,6 +19,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding-left: 10px;
+  padding-right: 25px;
 }
 
 .editSpotForm input {
@@ -43,6 +47,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .buttonContainer {
