--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -1,8 +1,3 @@
-.spotImg {
-    height: 250px;
-    flex-wrap: wrap;
-}
-
 .eachSpot {
     display: flex;
     flex-wrap: wrap;
@@ -10,11 +5,13 @@
 }
 
 .spotImg {
+    flex-wrap: wrap;
     float: left;
     width: 300px;
     height: 300px;
     background-size: cover;
     border-radius: 33px;
+    object-fit: cover;
     margin: 1rem;
 }
 
@@ -25,5 +22,30 @@
 a:link {
     text-decoration: none;
 }
+
+.spotLocation {
+    padding-left: 17px;
+    padding-right: 20px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.spotDistance {
+    display: flex;
+    padding-left: 17px;
+    font-size: 14px;
+    margin-top: 3px;
+}
+
+.spotPrice {
+    display: flex;
+    padding-left: 17px;
+    font-size: 14px;
+    font-weight: 100;
+}
+
 
 
