added react calendar. need to work on functionality

--- a/frontend/src/components/UserSpots/userSpots.css
+++ b/frontend/src/components/UserSpots/userSpots.css
@@ -1,13 +1,12 @@
 .mySpots {
     border: 1px solid black;
     display: flex;
-    justify-content: center;
-    align-items: center;
     border-radius: 15px;
     width: fit-content;
     padding-right: 25px;
     padding-left: 25px;
     margin-bottom: 15px;
+    cursor: pointer;
 }
 
 .spotDetails {
@@ -23,9 +22,17 @@
 
 .spotsContainer {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
 
+.detailSpot {
+    display: flex;
+}
 
+.spot-bottom-div {
+    margin-top: 10px;
+}
+
+.my-spots-div {
+    display: flex;
+    justify-content: center;
+}
