--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -115,8 +115,8 @@
   letter-spacing: 0.5px;
 }
 
-#dropdown1,
-#dropdown2 {
+
+#dropdown {
   font-size: 15px;
   color: black;
   font-weight: 500;
