removed bold font from bookings

--- a/frontend/src/components/Bookings/myBookings.css
+++ b/frontend/src/components/Bookings/myBookings.css
@@ -31,9 +31,9 @@
     margin-left: 10px;
 }
 
-.start-date {
+/* .start-date {
     font-weight: 700;
-}
+} */
 
 .spot-info-div {
     text-decoration: none;
