--- a/frontend/src/components/LoginFormModal/Login.css
+++ b/frontend/src/components/LoginFormModal/Login.css
@@ -61,6 +61,17 @@
   width: 100%;
 }
 
+.demo-login-form-button {
+  background: #ff385c;
+  color: white;
+  font-weight: 500;
+  height: 45px;
+  width: 103%;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  width: 100%;
+}
+
 .button {
   /* background: linear-gradient(to bottom right, #e5204d, #d70965);
   color: white; */
