changed font color to black instead of default navlink color

--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -47,5 +47,18 @@ a:link {
     font-weight: 100;
 }
 
+.spot-city {
+    color: black;
+}
 
+.spotStars {
+    color: black;
+}
 
+.spotDistance {
+    color: grey;
+}
+
+.spotPrice {
+    color: black;
+}
