--- a/frontend/src/components/Bookings/bookingPage.css
+++ b/frontend/src/components/Bookings/bookingPage.css
@@ -50,3 +50,21 @@
     display: flex;
     margin-left: 380px;
 }
+
+.view {
+    background: #ff385c;
+    color: white;
+    font-size: 16px;
+    /* font-weight: 500; */
+    height: 45px;
+    margin-top: 30px;
+    border-radius: 33px;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.link {
+    width: 260px;
+}
