--- a/frontend/src/components/Bookings/createBooking.css
+++ b/frontend/src/components/Bookings/createBooking.css
@@ -19,13 +19,30 @@
     background: linear-gradient(0.25turn, #E61E4D, #D70666);
     color: white;
     border: none;
-    height: 3.6em;
+    height: 50px;
     border-radius: .5em;
     width: 95%;
     max-width: 95%;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
     margin-top: 1em;
+  }
+
+  .login-modal {
+    background: linear-gradient(0.25turn, #E61E4D, #D70666);
+    color: white;
+    border: none;
+    height: 50px;
+    border-radius: .5em;
+    width: 95%;
+    max-width: 95%;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    margin-top: 1em;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    font: 14px;
   }
   
   .sub-text {
